Add EnumPropertyProcessor